<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <ImageView
        android:id="@+id/backImgVew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="381dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backImgVew">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="170dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hllo"
                android:textColor="@color/orange"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zishan"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:visibility="invisible" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageView
            android:id="@+id/profileView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/profileimage" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="316dp"
        android:layout_height="156dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/pgclr"
        app:cardCornerRadius="10dp"
        app:cardElevation="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat1">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="182dp"
            android:layout_height="121dp"
            android:layout_gravity="center"
            android:layout_marginEnd="70dp"
            app:srcCompat="@drawable/piggy" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:layout_marginTop="-20dp"
            android:text="@string/hlp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dntButton4"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg1"
            android:fontFamily="@font/robotoromanmedium"
            android:text="@string/dnte"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="288dp"
        android:text="@string/caus"
        android:textColor="@color/grey"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/foodCardView"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/pgclr"
                app:cardCornerRadius="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/foodicon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:text="@string/fd"
                        android:textColor="@color/black" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/bookCardView"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/pgclr"
                app:cardCornerRadius="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/bookicon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:text="@string/bks"
                        android:textColor="@color/black" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/clothCardView"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/pgclr"
                app:cardCornerRadius="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/clothicon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:text="@string/clth"
                        android:textColor="@color/black" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/moneyCardView"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/pgclr"
                app:cardCornerRadius="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/coinicon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:text="@string/mny"
                        android:textColor="@color/black" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </HorizontalScrollView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewNew"
        android:layout_width="316dp"
        android:layout_height="156dp"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/pgclr"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotoromanbold"
                    android:text="@string/gtIn"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/robotoromanbold"
                    android:text="@string/cmp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/volButton"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_bg1"
                    android:fontFamily="@font/robotoromanmedium"
                    android:text="@string/bcm"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:src="@drawable/charityicon" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>